Issue #SB-18459 fix: Fixed UI break in page filter

--- a/src/app/page-filter/page-filter-options/page-filter-options.page.scss
+++ b/src/app/page-filter/page-filter-options/page-filter-options.page.scss
@@ -24,6 +24,7 @@
       overflow-y: scroll;
       max-height: 50vh !important; 
       padding-bottom: 10vh !important;
+      margin-left: 1.7%;
     }
     .item-md {
       font-size: 1.3rem !important;
